--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,15 +1,14 @@
-@import url("https://fonts.googleapis.com/css2?family=Antonio:wght@100..700&family=Bebas+Neue&family=DM+Serif+Text:ital@0;1&family=Parisienne&family=Special+Elite&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Antonio:wght@100..700&family=Bebas+Neue&family=DM+Serif+Text:ital@0;1&family=Parisienne&family=Special+Elite&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap");
 
 @import "tailwindcss";
 
 :root {
   color-scheme: light dark;
 
-  --color-white: #dadada;
+  --color-white: #ffffff;
   --color-black: #141517;
   --color-accent: #ff3c00;
-  --color-subtle-gray: #F2F4F7;
+  --color-subtle-gray: #f2f4f7;
   --color-muted: #f1f1f1;
 
   --scroll-track: #f1f1f1;
