--- a/src/styles/Experience.css
+++ b/src/styles/Experience.css
@@ -55,9 +55,9 @@
 }
 
 .dark .experience-card {
-  background-color: rgb(23, 23, 23);
-  box-shadow: 0 10px 30px rgba(255, 255, 255, 0.05);
-  border: 1px solid var(--color-white);
+  background-color: #171717;
+  box-shadow: 0 10px 30px #262626;
+  border: 1px solid #262626;
 }
 
 .experience-content {
@@ -114,7 +114,7 @@
   padding-left: 1.8rem;
   margin-bottom: 1rem;
   line-height: 1.6;
-  color: var(--color-muted);
+  color: var(--color-black);
 }
 
 .dark .achievement-item {
@@ -142,10 +142,14 @@
 .technologies-title {
   font-size: 0.9rem;
   font-weight: 600;
-  color: #6b7280;
+  color: var(--color-black);
   text-transform: uppercase;
   letter-spacing: 0.05em;
   margin-bottom: 1rem;
+}
+
+.dark .technologies-title{
+  color: var(--color-white);
 }
 
 .technologies-list {
