--- a/src/styles/Experience.css
+++ b/src/styles/Experience.css
@@ -37,10 +37,14 @@
 
 .section-subtitle {
   font-size: 1.2rem;
-  color: var(--color-muted);
+  color: var(--color-black);
   max-width: 700px;
   margin: 0 auto;
   font-weight: 400;
+}
+
+.dark .section-subtitle{
+    color: var(--color-muted);
 }
 
 /* Experience Card */
