--- a/src/styles/Contact.css
+++ b/src/styles/Contact.css
@@ -1,4 +1,3 @@
-
 .contact-section {
   padding: 5rem 0;
   background-color: var(--color-subtle-gray);
@@ -194,6 +193,14 @@
 
 .dark .contact-clickable:hover {
   background-color: rgba(255, 255, 255, 0.05);
+}
+
+.contact-text {
+  color: var(--color-black);
+}
+
+.dark .contact-text {
+  color: var(--color-muted);
 }
 
 /* Responsive Styles */
